[package]
name = "archlinux-repo"
version = "0.4.0"
authors = ["THMonster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "*", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["h2", "brotli", "deflate", "gzip", "json", "rustls-tls", "stream"] }
axum = "0.7"
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["fs"] }
log = "0.4"
env_logger = "0.11"
anyhow = "*"

[profile.release]
panic = 'abort'
opt-level = 3
lto = true
